--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,7 @@ input[type=button], input[type=submit], input[type=reset] {
 
 .tags ul {
     display: flex;
+    flex-wrap: wrap;
     gap: 1em;
     list-style: none;
     padding-left: 0;
